--- a/theme.css
+++ b/theme.css
@@ -40,13 +40,14 @@ body {
   /* padding: 3em 0; */
   /* align-self: auto; */
   text-align: center;
-  white-space: pre;
+  white-space: pre-wrap;
 
 }
 
 .Aligner {
   background: rgba(0,0,0,0.1);
   font-weight: bold;
+  font-size: .96em;
   box-shadow: 0px 0px 5px;
   border-radius: 5px;
   width: 2.4in;
@@ -77,7 +78,7 @@ body {
   text-align: center;
   vertical-align: middle;
   width: 2.4in;
-  // white-space:pre;
+  white-space:pre-wrap;
 }
 /*.student  > .text {
   height: 0.97in;
@@ -134,6 +135,7 @@ span.name {
 img {
   display: block;
   margin: 5px auto;
+  max-width: 2.4in;
 }
 .image-border {
   border: 3px inset lightgray;
